# baxter_cpp

./: .gitignore  .travis.yml  .travis.yml.disabled  CONTRIBUTING.md  README.md  baxter.rosinstall  baxter_experimental.rosinstall  baxter_sdk.rosinstall  moveit.rosinstall
baxter_benchmarking/: CHANGELOG.rst  CMakeLists.txt  package.xml
baxter_benchmarking/config/: industrial.config
baxter_benchmarking/launch/: run_benchmark_gui.launch
baxter_benchmarking/resources/: industrial.scene  load_industrial.sh
baxter_control/: CHANGELOG.rst  CMakeLists.txt  package.xml
baxter_control/config/: baxter_control_single.yaml  baxter_controllers.yaml  baxter_controllers.yaml.other  baxter_individual_control.yaml  baxter_reflexxes_controller.yaml  baxter_reflexxes_controller.yaml~  baxter_ros_control.yaml  baxter_sdk_control.yaml  baxter_trajectory_control.yaml  baxter_trajectory_control.yaml.beforedamping  gazebo_controllers.yaml  hardware_controllers.yaml  trajectory_controller.yaml
baxter_control/launch/: baxter_bringup.launch  baxter_configure.launch  baxter_control.launch  baxter_control_single.launch  baxter_gazebo_ros_control.launch  baxter_hardware.launch  baxter_hardware_interface.launch  baxter_hardware_testing.launch  baxter_hardware_velocity.launch  baxter_individual_control.launch  baxter_individual_rqt.launch  baxter_individual_rqt.perspective  baxter_reflexxes_control.launch  baxter_rqt_control.launch  baxter_sdk_control.launch  baxter_sdk_position_control.launch  baxter_sdk_position_rqt.perspective  baxter_sdk_rqt.launch  baxter_sdk_velocity_control.launch  baxter_sdk_velocity_rqt.perspective  baxter_state_publisher.launch  baxter_trajectory_control.launch  baxter_trajectory_controller.launch  baxter_trajectory_rqt.launch  baxter_trajectory_rqt.perspective  baxter_tune_trajectory_controller.launch  baxter_visualization.launch  baxter_visualization2.launch  gazebo_control.launch  joint_position_trajectory_controller.launch  joint_position_trajectory_controller.perspective  joint_trajectory_controller.launch  joint_trajectory_controller.perspective  other_commands.txt  rqt_control.perspective  trajectory_left.perspective  trajectory_left_rqt.launch  trajectory_right.perspective  trajectory_right_rqt.launch
baxter_control/scripts/: sonar_enable.py
baxter_control/src/: arm_hardware_interface.cpp  arm_simulator_interface.cpp  baxter_assembly_state.cpp  baxter_hardware_interface.cpp  baxter_to_csv.cpp  baxter_utilities.cpp
baxter_control/trajectory_recordings/: example_file  hold_position
baxter_controllers/: CHANGELOG.rst  CMakeLists.txt  baxter_controllers_plugins.xml  package.xml
baxter_controllers/src/: baxter_gripper_controller.cpp  baxter_gripper_controller.h  baxter_position_controller.cpp  baxter_velocity_controller.cpp  baxter_velocity_mode_controller.cpp  joint_positions_controller.cpp  joint_positions_controller.h  joint_trajectory_controller.cpp  joint_trajectory_controller.h
baxter_cpp/: CMakeLists.txt  baxter.rosinstall  baxter_simulator.rosinstall  package.xml
baxter_experimental/: CMakeLists.txt  package.xml
baxter_experimental/src/: baxter_to_csv.cpp  percieve_dynamics.cpp
baxter_gazebo/: CHANGELOG.rst  CMakeLists.txt  package.xml
baxter_gazebo/documentation/: .~lock.baxter_simulation.odg#  baxter_simulation.odg
baxter_gazebo/launch/: baxter_gazebo.launch  baxter_world.launch
baxter_gazebo/src/: baxter_gazebo_ros_control_plugin.cpp  mimic_physical.cpp
baxter_gazebo/worlds/: baxter.world
baxter_gazebo_plugin/: CMakeLists.txt  package.xml
baxter_gazebo_plugin/src/: baxter_gazebo_ros_control_plugin.cpp
baxter_gripper_server/: CHANGELOG.rst  CMakeLists.txt  package.xml
baxter_gripper_server/launch/: baxter_gripper_server.launch
baxter_gripper_server/src/: gripper_action_server.cpp
baxter_ikfast/baxter_ikfast_left_arm_plugin/: CHANGELOG.rst  CMakeLists.txt  package.xml  update_ikfast_plugin.sh
baxter_ikfast/baxter_ikfast_right_arm_plugin/: CHANGELOG.rst  CMakeLists.txt  baxter_right_arm_moveit_ikfast_plugin_description.xml  package.xml  update_ikfast_plugin.sh
baxter_ikfast_left_arm_plugin/: CHANGELOG.rst  CMakeLists.txt  baxter_left_arm_moveit_ikfast_plugin_description.xml  package.xml
baxter_ikfast_left_arm_plugin/src/: baxter_left_arm_ikfast_moveit_plugin.cpp  baxter_left_arm_ikfast_solver.cpp
baxter_ikfast_right_arm_plugin/: CHANGELOG.rst  CMakeLists.txt  package.xml
baxter_ikfast_right_arm_plugin/src/: baxter_right_arm_ikfast_moveit_plugin.cpp  baxter_right_arm_ikfast_solver.cpp
baxter_motor_msgs/: CMakeLists.txt  package.xml
baxter_motor_msgs/msg/: AccelerometerStates.msg  CollisionDetection.msg  Constraint.msg  DebugJointCommand.msg  DebugJointState.msg  DebugNodeState.msg  DebugServoLoopState.msg  DebugServoLoopStateDetail.msg  DebugVelocityController.msg  GripperConfiguration.msg  GripperStates.msg  Inertia.msg  LimbState.msg  LimbStates.msg  NavigatorStates.msg  NullspaceTwistStamped.msg  PoseFixed.msg  SonarState.msg  SonarStates.msg  SpeedConstraint.msg  SpeedLimit.msg  SpeedLimitScale.msg  SplineProfileParameters.msg  Stiffness.msg  StiffnessConstraint.msg  SuckerState.msg  SuckerStates.msg  TwistConstraint.msg  TwistFixed.msg  TwistLevel.msg  URDFSegment.msg  VelocityControllerState.msg  WrenchConstraint.msg  WrenchLevel.msg
baxter_moveit_scripts/: CMakeLists.txt  package.xml
baxter_moveit_scripts/launch/: block_grasp_generator_test.launch  block_pick_place.launch  get_joint_values.launch  gripper_open_close.launch  random_planning.launch
baxter_moveit_scripts/src/: send_random.cpp  send_ready.cpp
baxter_perception/: CMakeLists.txt  package.xml
baxter_perception/launch/: baxter_perception.launch  checkerboard_detector.launch  object_to_world_pub.launch  objectdetection_tf_publisher.launch
baxter_pick_place/: CHANGELOG.rst  CMakeLists.txt  package.xml  pick_place_server.launch
baxter_pick_place/launch/: baxter_grasp_generator_test.rviz  baxter_pick_place.launch  (+12 more)
baxter_scripts/: CHANGELOG.rst  CMakeLists.txt  package.xml
baxter_state_publisher/: CMakeLists.txt  package.xml
(+116 files in other folders)
