<?xml version="1.0"?>
<package>
  <name>baxter_control</name>
  <version>0.2.1</version>
  <description>ros_control controllers for use with Gazebo</description>     


  <maintainer email="davetcoleman@gmail.com">Dave Coleman</maintainer>

  <author>Dave Coleman</author>
  <license>BSD</license>

  <url type="website">https://github.com/davetcoleman/baxter</url>
  <url type="bugtracker">https://github.com/davetcoleman/baxter/issues</url>
  <url type="repository">https://github.com/davetcoleman/baxter</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>baxter_msgs</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>transmission_interface</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>joint_limits_interface</build_depend>
  <build_depend>trajectory_msgs</build_depend>

  <run_depend>moveit_ros_planning_interface</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>baxter_msgs</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>transmission_interface</run_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>joint_limits_interface</run_depend>
  <run_depend>baxter_description</run_depend>
  <run_depend>trajectory_msgs</run_depend>

</package>


