<?xml version="1.0"?>
<package>
  <name>baxter_cpp</name>
  <version>0.0.1</version>
  <description>The baxter_cpp package</description>

  <maintainer email="davetcoleman@gmail.com">Dave Coleman</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/davetcoleman/baxter_cpp</url>
  <url type="butracker">https://github.com/davetcoleman/baxter_cpp/issues</url>
  <url type="repository">https://github.com/davetcoleman/baxter_cpp/</url>

  <author email="davetcoleman@gmail.com">Dave Coleman</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>baxter_moveit_config</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
