<?xml version="1.0"?>
<package>
  <name>baxter_gripper_server</name>
  <version>0.2.1</version>
  <description>Provides an action server for controlling the Baxter grippers</description>

  <maintainer email="davetcoleman@gmail.com">Dave Coleman</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/davetcoleman/baxter</url> -->
  <url type="butracker">https://github.com/davetcoleman/baxter/issues</url> -->
  <url type="repository">https://github.com/davetcoleman/baxter/</url> -->

  <author email="davetcoleman@gmail.com">Dave Coleman</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>control_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>baxter_msgs</build_depend>

  <run_depend>control_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>baxter_msgs</run_depend>

  <export>
  </export>
</package>




